[project]
name = "clockpunch"
dynamic = ["version"]
description = "blurb"
readme = "README.md"
requires-python = "==3.10.0"
authors = [{ name = "Dylan Penn", email = "dylan.penn@vt.edu" }]

dependencies = [
    "gymnasium==0.26.3",
    "matplotlib>=3.5",
    "ray==2.5.0",
    "ray[air]==2.5.0",
    "ray[tune]==2.5.0",
    "ray[rllib]==2.5.0",
    "ray[serve]==2.5.0",
    "torch==1.13.1",
    "intervaltree>=3.1",
    "cuda-python==11.7.1",
    "scipy>=1.9",
    "satvis==0.2.1",
    "TensorFlow==2.13",
    "tensorflow_probability==0.21", # an undefined dependency of Ray
    "pygame==2.2.0",
    "pandas==2.0.2",
    "scikit-learn==1.3.0",
]

[project.optional-dependencies]
dev = [
    # "flake8",
    # "pylint",
    "pytest",
    "tensorboard",
    "flake8-bugbear==22.4.25",
    "flake8-builtins==1.5.3",
    "flake8-docstrings==1.6.0",
    "flake8-plugin-utils==1.3.2",
    "flake8-pytest-style==1.6.0",
    "flake8-rst-docstrings==0.2.6",
    # "black>=22.3.0",
    "isort[colors]",
    "torchvision==0.14.1",
    # "econoplots>=0.1.3",
]

[build-system]
requires = ["setuptools>=42", "wheel>=0.29.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "punchclock", # folder where modules are stored
    "issues",
]
zip-safe = false
[tool.setuptools.dynamic]
version = { attr = "punchclock.__version__" }

[tool.isort]
# Play nicely with black
profile = "black"
# Use .gitingore to skip files
skip_gitignore = true
# Line length rules
line_length = 79
# Enforce Unix line endings
line_ending = "\n"
# Whitelist first party imports
known_first_party = ["clockpunch"]
# Import headers
import_heading_stdlib = "Standard Library Imports"
import_heading_thirdparty = "Third Party Imports"
import_heading_firstparty = "Punch Clock Imports"
import_heading_localfolder = "Local Imports"
